logs/collective.kssinline.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/kssinline'...
Listing './lib/python3.5/site-packages/collective/kssinline/browser'...
Listing './lib/python3.5/site-packages/collective/kssinline/browser/adapters'...
Compiling './lib/python3.5/site-packages/collective/kssinline/browser/kssview.py'...
***   File "./lib/python3.5/site-packages/collective/kssinline/browser/kssview.py", line 101
    raise KSSExplicitError, 'Nothing to do'
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/kssinline/browser/resources'...
Listing './lib/python3.5/site-packages/collective/kssinline/browser/utilities'...
Listing './lib/python3.5/site-packages/collective/kssinline/browser/viewlets'...
Listing './lib/python3.5/site-packages/collective/kssinline/browser/views'...
Listing './lib/python3.5/site-packages/collective/kssinline/examples'...
Listing './lib/python3.5/site-packages/collective/kssinline/examples/adapters'...
Listing './lib/python3.5/site-packages/collective/kssinline/examples/utilities'...
Listing './lib/python3.5/site-packages/collective/kssinline/model'...
Listing './lib/python3.5/site-packages/collective/kssinline/profiles'...
Listing './lib/python3.5/site-packages/collective/kssinline/profiles/default'...
Listing './lib/python3.5/site-packages/collective/kssinline/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/kssinline/skins'...
Listing './lib/python3.5/site-packages/collective/kssinline/skins/kssinline_images'...
Listing './lib/python3.5/site-packages/collective/kssinline/skins/kssinline_styles'...
Listing './lib/python3.5/site-packages/collective/kssinline/skins/kssinline_templates'...
Compiling './lib/python3.5/site-packages/collective/kssinline/skins/kssinline_templates/evalMacro.py'...
***   File "./lib/python3.5/site-packages/collective/kssinline/skins/kssinline_templates/evalMacro.py", line 27
    return context.kssinline_macro_renderer.pt_render(extra_context=extra_context).strip()
                                                                                         ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/collective/kssinline/tools'...
Listing './lib/python3.5/site-packages/collective.kssinline-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
